--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       });
 
       // Password-protected click on the main photo
-      var PASSWORD = 'ARSB2026#archives/domain';
+      var PASSWORD = 'ARSB2026';
       var discordURL = 'https://discord.com/channels/1421459296885018656/1455584018262261811';
       var main = document.getElementById('main-photo');
       if (main) {
@@ -184,4 +184,5 @@
   </script>
 </body>
 </html>
+
 
