--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
       // Password-protected click on the main photo
       var PASSWORD = 'ARSB2026';
-      var discordURL = 'https://discord.com/channels/1421459296885018656/1455584018262261811';
+      var discordURL = 'https://coddernessie.github.io/ARSBArchives/';
       var main = document.getElementById('main-photo');
       if (main) {
         function closeSite() {
@@ -184,5 +184,6 @@
   </script>
 </body>
 </html>
+
 
 
