--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       });
 
       // Password-protected click on the main photo
-      var ARSBPASSWORD = 'ARSB2026dmain';
+      var ARSBPASSWORD = 'ARSB2026domain';
       var archivesURL = 'https://coddernessie.github.io/ARSBArchives/';
       var main = document.getElementById('main-photo');
       if (main) {
@@ -184,6 +184,7 @@
   </script>
 </body>
 </html>
+
 
 
 
